
package PFK.Chat;

message ProtoVersion {
	required int32 version = 1;
}
message Login {
	required string username = 1;
	required string password = 2;
}
message LoginToken {
	required string username = 1;
	required string token = 2;
}
message Register {
	required string username = 1;
	required string password = 2;
}
message IM_Message {
	optional string username = 1;
	required string msg = 2;
}
enum TypingState {
	STATE_EMPTY = 1;
	STATE_TYPING = 2;
	STATE_ENTERED_TEXT = 3;
}
message TypingInd {
	required TypingState state = 1;
}
enum ClientToServerType {
	CTS_PROTOVERSION = 1;     // use 'protoversion'
	CTS_PING = 2;             // no arg
	CTS_LOGIN = 3;            // use 'login'
	CTS_LOGIN_TOKEN = 4;      // use 'logintoken'
	CTS_REGISTER = 5;         // use 'register'
	CTS_IM_MESSAGE = 6;       // use 'im'
	CTS_TYPING_IND = 7;       // use 'typing'
}
message ClientToServer {
	required ClientToServerType type = 1;
	optional ProtoVersion protoversion = 2;
	optional Login login = 3;
	optional LoginToken logintoken = 4;
	optional Register regreq = 5;
	optional IM_Message im = 6;
	optional TypingInd typing = 7;
}


enum ProtoVersionResp {
	PROTO_VERSION_MATCH = 1;
	PROTO_VERSION_MISMATCH = 2;
}
enum LoginStatusValue {
	LOGIN_ACCEPT = 1;
	LOGIN_REJECT = 2;
}
message LoginStatus {
	required LoginStatusValue status = 1;
	optional string token = 2;
}
enum RegisterStatusValue {
	REGISTER_ACCEPT = 1;
	REGISTER_INVALID_USERNAME = 2;
	REGISTER_INVALID_PASSWORD = 3;
	REGISTER_DUPLICATE_USERNAME = 4;
}
message RegisterStatus {
	required RegisterStatusValue status = 1;
	optional string token = 2;
}
message UserInfo {
	required TypingState typing = 1;
	required string username = 2;
}
message UserList {
	repeated UserInfo users = 1;
}
enum UserStatusValue {
	USER_LOGGED_IN = 1;
	USER_LOGGED_OUT = 2;
}
message UserStatus {
	required string username = 1;
	required UserStatusValue status = 2;
}
enum ServerToClientType {
	STC_PROTOVERSION_RESP = 1;  // use protoversionresp
	STC_PONG = 2;               // no arg
	STC_LOGIN_STATUS = 3;       // use loginStatus
	STC_REGISTER_STATUS = 4;    // use registerStatus
	STC_IM_MESSAGE = 5;         // use 'im'
	STC_USER_LIST = 6;          // use 'userlist'
	STC_USER_STATUS = 7;        // use 'userstatus'
}
message ServerToClient {
	required ServerToClientType type = 1;
	optional ProtoVersionResp protoversionresp = 2;
	optional LoginStatus loginStatus = 3;
	optional RegisterStatus registerStatus = 4;
	optional IM_Message im = 5;
	optional UserList userlist = 6;
	optional UserStatus userstatus = 7;
}
